# knowledge-base

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  PLAN_MNEMOSYNE.md  RAG_IMPROVEMENTS.md  README.md  TASK_MNEMOSYNE.md  devcontainer.json  docker-compose.yml  pre-commit-config.yaml  pyproject.toml  requirements.txt  review_index.md  run
.github/: metadata.json
.github/workflows/: deploy.yml
Documentation/: software development path.md  software plan.md
agents/: __init__.py  base_tool.py  memory.py  router.py  tool_registry.py  tools.py
agents/tools/: __init__.py  rag_answer.py
app/: __init__.py  db.py  dependencies.py  di.py  main.py  settings.py
app/routes/: __init__.py  config.py  health.py  ingest.py  llm.py  logs.py  memory.py  query.py
apps/assistant-api/: pyproject.toml
apps/assistant-api/app/: main.py
apps/assistant-api/app/routes/: health.py
cli/: main.py
cli/commands/: __init__.py  chat.py  config.py  ingest.py  query.py  serve.py
connectors/: __init__.py  calendar.py  drive.py  web.py
core/: config.py  database.py  model_registry.py  queue.py  session_store.py
core/prompts/: llm.md  llm_with_rag.md  summarize.md
core/schemas/: __init__.py  events.py  messages.py  sessions.py
core/services/: __init__.py  chat_service.py
core/utils/: __init__.py  config.py  logging.py  logging_config.py
data/corpus/career/: projects_summaries.md  resume.md
data/corpus/career/projects/: cognitive_coach.md  job_search_profile.md  myai.md  package_registry.md  portfolio.md  simrag.md  trading_card.md
data/corpus/personal/: profile.md
data/documents/algorithms/: binary_search_algorithm.md  google_cloud_platform_tutorial.md  what_is_cicd.md  what_is_devops.md
data/documents/docker/: containerize_your_app.md  develop_your_app.md  docker_build.md  leveraging_rag_in_genai.md  what_is_docker.md
data/documents/python/: python_standard_library.md
data/library_blob/: _manifest.json  blob_8968231b5d2c.txt
data/qdrant_db/: meta.json
docs/: architecture.md
infra/: Makefile
llm/: __init__.py  base_client.py  demo.py  external.py  gateway.py  local.py
llm/providers/: __init__.py  anthropic.py  purdue.py
mermaid-architecture/: README.md  architecture-detailed.md  architecture-overview.md
rag/: chunking.py  composition.py  demo.py  document_ingester.py  document_parser.py  embedder.py  ingestion.py  journal.py  loader.py  query_processor.py  rag_setup.py  reranker.py  retrieval.py  retriever.py  storage.py  sync.py  vector_store.py  workers.py
scripts/: ingest_library.py
tests/: README.md  run_tests.py
tests/tests_ai_providers/: test_gateway.py  test_local.py  test_purdue_api.py
tests/tests_api/: test_api.py
tests/tests_rag/: test_rag.py
tests/tests_tuning/: __init__.py  test_basic_tuning.py  test_demo.py
tuned_models/: README.md
tuned_models/llama_1b/: model_registry.json
tuned_models/llama_1b/v1.0/: README.md  model_info.json
tuned_models/llama_1b/v1.1/: README.md  model_info.json
tuned_models/llama_8b/: model_registry.json
tuned_models/llama_8b/v1.0/: README.md  model_info.json
tuning/: __init__.py  basic_tuning.py  demo.py  model_manager.py  model_registry.py
